# StarSight

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  chat-资深数据分析师需求分析.txt  pyproject.toml  requirements.txt  需求分析文档.md  项目需求文档PRD.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/orchestrator/: __init__.py  agent.py  system.prompt
config/: agents.yaml  mcp-servers.yaml  workflows.yaml
docs/: Claude-Code-架构设计.md
mcp-servers/database-mcp/: README.md  __init__.py  config.py  requirements.txt  server.py
mcp-servers/spark-mcp/: README.md  __init__.py  config.py  requirements.txt  server.py
scripts/: setup-team.py
skills/data-platform-agent-design/: SKILL.md
skills/spark-data-processing/: SKILL.md  __init__.py  spark-job-template.py
