[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-platform-agent"
version = "1.0.0"
description = "Enterprise Data Platform based on Claude Code Skills + Agents + MCP Architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "YINJI LI"}
]
keywords = [
    "data-platform",
    "ai-agent",
    "mcp",
    "spark",
    "neo4j",
    "mlflow",
    "dmp",
    "risk-control"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Proprietary",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core
    "claude-code>=0.5.0",
    "anthropic>=0.18.0",

    # MCP Server Framework
    "mcp>=0.6.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",

    # Database Connectors
    "psycopg2-binary>=2.9.9",
    "mysql-connector-python>=8.2.0",
    "sqlalchemy>=2.0.0",

    # Spark & Big Data
    "pyspark>=3.4.0",
    "livy>=0.7.0",
    "findspark>=2.0.0",

    # Machine Learning & Model Management
    "mlflow>=2.10.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "shap>=0.43.0",
    "feast>=0.31.0",

    # Graph & Vector Databases
    "neo4j>=5.14.0",
    "milvus>=2.3.0",
    "pymilvus>=2.3.0",

    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",

    # Workflow & Approval Engines
    "camunda-python>=0.9.0",

    # API & Web
    "httpx>=0.26.0",
    "pydantic>=2.5.0",

    # Monitoring & Observability
    "prometheus-client>=0.19.0",

    # Configuration & Utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]

[project.scripts]
data-platform = "data_platform.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents/*", "mcp_servers/*", "skills/*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["agents", "mcp_servers", "skills"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"